--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,14 @@ requires-python = ">=3.13"
 # DEPENDENCIES
 # ============================================================================
 dependencies = [
+    "bandit>=1.9.2",
     "fastapi[standard]>=0.121.0",
+    "mypy>=1.18.2",
     "psycopg2-binary>=2.9.11",
+    "pytest>=9.0.1",
+    "ruff>=0.14.6",
+    "safety>=3.7.0",
+    "semantic-release>=0.1.0",
     "sqlmodel>=0.0.27",
 ]
 
