test: add unit tests for main and items

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ disallow_untyped_defs = true
 plugins = ["sqlalchemy.ext.mypy.plugin"]
 
 [tool.pytest.ini_options]
+pythonpath = ["."]
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
