--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,3 +63,4 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
 addopts = "--strict-markers --cov=app --cov-report=term-missing"
+pythonpath = "."
