--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pytest>=9.0.1",
     "ruff>=0.14.6",
     "safety>=3.7.0",
-    "semantic-release>=0.1.0",
+    "python-semantic-release>=9.12.0",
     "sqlmodel>=0.0.27",
 ]
 
