--- a/.github/workflows/sync-develop.yml
+++ b/.github/workflows/sync-develop.yml
@@ -14,6 +14,7 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       contents: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -21,10 +22,30 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Sync Main to Develop
+      - name: Create Pull Request
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Create a new branch for the sync
+          BRANCH_NAME="sync/main-to-develop-${{ github.run_id }}"
+          git checkout -b $BRANCH_NAME
+
+          # Merge main into the new branch
           git fetch origin main
-          git merge origin/main
-          git push origin develop
+          git merge origin/main --no-edit
+
+          # Push the new branch
+          git push origin $BRANCH_NAME
+
+          # Create a Pull Request
+          gh pr create \
+            --base develop \
+            --head $BRANCH_NAME \
+            --title "chore: sync main to develop" \
+            --body "Syncing changes from main to develop."
+
+          # Merge the Pull Request
+          gh pr merge $BRANCH_NAME --merge --auto
