--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,3 +117,8 @@ allowed_tags = [
 ]
 minor_tags = ["feat"]
 patch_tags = ["fix", "perf"]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["app*"]
+exclude = ["brief*"]
